RESOLVED FIXED 255609
[GStreamer][WebRTC] Plumb exception handling from PC backend to end-point
https://bugs.webkit.org/show_bug.cgi?id=255609
Summary [GStreamer][WebRTC] Plumb exception handling from PC backend to end-point
Philippe Normand
Reported 2023-04-18 10:00:47 PDT
ssia
Attachments
Philippe Normand
Comment 1 2023-04-18 10:03:09 PDT
EWS
Comment 2 2023-04-19 01:42:48 PDT
Committed 263119@main (3a67ae15a754): <https://commits.webkit.org/263119@main> Reviewed commits have been landed. Closing PR #12870 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-19 01:43:18 PDT
Note You need to log in before you can comment on or make changes to this bug.