[GStreamer][WebRTC] Plumb exception handling from PC backend to end-point https://bugs.webkit.org/show_bug.cgi?id=255609

Reviewed by Xabier Rodriguez-Calvar.

The PC addTransceiverFromTrackOrKind method returns an ExceptionOr<>, so chain this down to the
end-point instead of using an optional<>.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::createTransceiverBackends):
(WebCore::GStreamerMediaEndpoint::addTransceiver):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.h:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:
(WebCore::GStreamerPeerConnectionBackend::addTransceiverFromTrackOrKind):

Canonical link: https://commits.webkit.org/263119@main